--- a/src/app/components/modal-viaje/modal-viaje.component.html
+++ b/src/app/components/modal-viaje/modal-viaje.component.html
@@ -9,9 +9,9 @@
 
 <ion-content>
   <ion-list>
-    <ion-item *ngFor="let passenger of passengers">
-      {{ passenger }}
-      <ion-button slot="end" [color]="isPassengerArrived(passenger) ? 'danger' : 'primary'" (click)="markPassengerInDestination(passenger)">Pasajero en destino</ion-button>
+    <ion-item >
+
+      <!-- Aquí puedes poner más lógica si es necesario -->
     </ion-item>
   </ion-list>
 </ion-content>
