--- a/src/app/pages/viajes/viajes.page.scss
+++ b/src/app/pages/viajes/viajes.page.scss
@@ -25,3 +25,13 @@ ion-content {
     }
   }
 }
+
+
+.card-disponible {
+  background-color: lightgreen; // o el color verde que prefieras
+}
+
+.card-no-disponible {
+  background-color: lightcoral; // o el color rojo que prefieras
+}
+
