--- a/src/app/pages/recuperar-contrasena/recuperar-contrasena.page.html
+++ b/src/app/pages/recuperar-contrasena/recuperar-contrasena.page.html
@@ -1,24 +1,32 @@
+
 <ion-header>
   <ion-toolbar>
-      <ion-title>Recupera tu contraseña</ion-title>
-      <ion-buttons slot="start">
+    <ion-title>Recupera tu contraseña</ion-title>
+    <ion-buttons slot="start">
       <ion-back-button default-href="inicio"></ion-back-button>
-      </ion-buttons>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
+<body>
+  <ion-content class="ion-padding" class="fondoUniversal">
+    <form>
+      <br><br><br>
+      <ion-card>
+        <ion-label position="floating">Correo Electrónico</ion-label>
+        <ion-input type="email" [(ngModel)]="email" required [ngModelOptions]="{standalone: true}"></ion-input>
+      </ion-card>
+  
+      
+  
+      <ion-button expand="full" (click)="recuperarContrasena()">Aceptar</ion-button>
+    </form>
 
-<ion-content class="ion-padding">
-  <form>
-    <ion-item>
-      <ion-label position="floating">Nueva Contraseña</ion-label>
-      <ion-input type="password" required></ion-input>
-    </ion-item>
+    <br>
+    <br>
+    <div class="img-container">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRqACr7pV6U4sF78QsZ4IH_DzjOpYJXnmjdYg&usqp=CAU">
+    </div>
+  </ion-content>
 
-    <ion-item>
-      <ion-label position="floating">Repita Contraseña</ion-label>
-      <ion-input type="password" required></ion-input>
-    </ion-item>
-
-    <ion-button expand="full" (click)="actualizarContrasena()">Aceptar</ion-button>
-  </form>
-</ion-content>
+  
+</body>
